<resources>
    <string name="app_name">ChatsApp</string>
    <string name="chat_hind">Type a message…</string>
    <string name="username_exe">Nguyễn Hằng :)</string>
    <string name="status_exe">Online</string>
    <string name="create_new_account">Create new account</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="sample_name">Sample Name</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string-array name="test">
        <item>test</item>
        <item>123</item>
        <item>234</item>
        <item>345</item>
    </string-array>
</resources>