<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_username"
            android:layout_marginTop="20dp"
            android:textSize="25sp">
        </android.inputmethodservice.ExtractEditText>

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email"
            android:layout_marginTop="20dp"
            android:textSize="25sp">
        </android.inputmethodservice.ExtractEditText>

        <android.inputmethodservice.ExtractEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:layout_marginTop="20dp"
            android:textSize="25sp">
        </android.inputmethodservice.ExtractEditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:gravity="center"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>