<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".activity.MainActivity">

    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<!--            Mũi tên lùi về-->

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_left_arrow"
                app:tint="@color/white"
                android:contentDescription="@string/app_name" />

<!--            Tên đối tượng chat-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_exe"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/status_exe"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

<!--            Nơi nhập tin nhắn -->

            <EditText
                android:id="@+id/box_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/chat_hind"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="14sp"
                android:autofillHints="" />

<!--            biểu tượng gửi tệp đính kèm-->

            <ImageView
                android:id="@+id/attachment"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="12dp"
                app:srcCompat="@drawable/ic_attachment"
                app:tint="#676767"
                android:contentDescription="@string/app_name" />

<!--            biểu tượng camera-->

            <ImageView
                android:id="@+id/camera"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="12dp"
                app:srcCompat="@drawable/ic_camera"
                app:tint="#676767"
                android:contentDescription="@string/app_name" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    Phần nội dung tin nhắn-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

<!--    btn gửi tin nhắn-->

    <ImageView
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_green"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:srcCompat="@drawable/ic_send"
        app:tint="@color/black"
        android:contentDescription="@string/app_name" />
</androidx.constraintlayout.widget.ConstraintLayout>
